Update application name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FFmpeg Video Editor</string>
+    <string name="app_name">Video Editor</string>
     <string name="rangeSeekBarText">Use RangeSeekbar to select time range for cutting video or extracting images from video(rangeseekbar ineffective for other options)</string>
     <string name="uploadVideo">Upload\nVideo</string>
     <string name="compressVideo">Compress\nVideo</string>
