Add cancel button and progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="selectVideo">Select\nVideo</string>
     <string name="encode">Encode</string>
+    <string name="cancel">Cancel</string>
 
     <string name="ok">OK</string>
 
