--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,17 @@
 
     <string name="ok">OK</string>
 
+    <string name="basicSettingsTitle">Basic Settings</string>
+    <string name="container">Container</string>
+    <string name="videoSettingsTitle">Video Settings</string>
+    <string name="codec">Codec</string>
+    <string name="fps">FPS</string>
+    <string name="resolution">Resolution</string>
+    <string name="bitrate">Bitrate</string>
+    <string name="audioSettingsTitle">Audio Settings</string>
+    <string name="sampleRate">Sample Rate</string>
+    <string name="channels">Channels</string>
+
     <string name="transcodeSuccess">Encoding completed successfully. The file was written to:\n<xliff:g id="path">%s</xliff:g></string>
     <string name="transcodeFailed">Encoding failed, see logs for details.</string>
 
