--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,9 @@
     <string name="codec">Codec</string>
     <string name="fps">FPS</string>
     <string name="resolution">Resolution</string>
-    <string name="bitrate">Bitrate</string>
+    <string name="bitrate">Bitrate (kb/s)</string>
     <string name="audioSettingsTitle">Audio Settings</string>
-    <string name="sampleRate">Sample Rate</string>
+    <string name="sampleRate">Sample Rate (Hz)</string>
     <string name="channels">Channels</string>
 
     <string name="transcodeSuccess">Encoding completed successfully. The file was written to:\n<xliff:g id="path">%s</xliff:g></string>
