Process FFmpeg calls in a JobService
Managing the FFmpeg calls in the Activity leaves open the
possibility that the Activity is killed due to memory
constraints, leaving the FFmpeg call orphaned or killed.
To manage this and other situations better, the managing
is now moved to a JobService.

The JobService is responsible for receiving encoding requests,
reporting status, and reporting the final result. Presently
only one file can be processed at a time.

If the Activity goes away while a file is being processed, when
the Activity is created again it will determine if a file
is being processed in the background. If it is, the progress
bar will be shown with the cancel button.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="sampleRate">Sample Rate (Hz)</string>
     <string name="channels">Channels</string>
 
+    <string name="selectFileFirst">You must select a file to encode first.</string>
     <string name="videoBitrateValueInvalid">Video bitrate value is invalid, could not encode.</string>
     <string name="transcodeSuccess">Encoding completed successfully. The file was written to:\n<xliff:g id="path">%s</xliff:g></string>
     <string name="transcodeFailed">Encoding failed, see logs for details.</string>
