--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="sampleRate">Sample Rate (Hz)</string>
     <string name="channels">Channels</string>
 
+    <string name="notSupportedTitle">Not Supported</string>
+    <string name="notSupportedMessage">This device\'s CPU architecture is not supported. Only ARM is supported.</string>
+
     <string name="selectFileFirst">You must select a file to encode first.</string>
     <string name="videoBitrateValueInvalid">Video bitrate value is invalid, could not encode.</string>
     <string name="transcodeSuccess">Encoding completed successfully. The file was written to:\n<xliff:g id="path">%s</xliff:g></string>
