Add setting for file search location
When open the file browser to find a file, the starting location
used to be external storage. It was mentioned that the last used
path would be easier, so this was instead made the default.

It turns out that navigating to the internal storage device
may prevent one from navigating back to external storage. The
way to recover was to wipe the app's data, resetting its last
used path. To avoid this, a new setting is added which sets what
the start path should be. The default is to use the last used
path, however it can be fixed to the external storage location.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,10 @@
     <string name="receivingSharedData">Receiving shared data…</string>
     <string name="failedToReceiveSharedData">Failed to receive shared data</string>
 
+    <string name="settings">Settings</string>
+    <string name="fileSearchPathSetting">File search path</string>
+    <string name="fileSearchPathSettingSummary">The path on the file system where the file browser will open when searching for a media file</string>
+    <string name="fileSearchPathSettingLastUsed">Last used path</string>
+    <string name="fileSearchPathSettingExternal">External storage</string>
+
 </resources>
