Do not stub out info for invalid files
Originally it was not known if parsing a media file
would generally succeed, and as a hedge some sane defaults
were given to the user if something went wrong.

It seems that parsing media files works well. If an
invalid file is provided, the video playback will fail
(which is expected), but encoding options are still provided.
In this case, the sane defaults are actually more confusing.
Removing them, as they are not really needed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="couldNotFindFileSubmsg">could not find input file</string>
     <string name="fieldMissingError"><xliff:g id="field_name">%s</xliff:g> missing</string>
     <string name="fieldMissingOrInvalidError"><xliff:g id="field_name">%s</xliff:g> missing or invalid</string>
+    <string name="invalidMediaFile">The selected media file is invalid or not supported</string>
 
     <string name="writePermissionExplanation">This application needs access to storage in order to read and write media files. Without this access, the application cannot transcode.</string>
     <string name="permissionRequestAgain">Request again</string>
